--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,23 @@
+:root {
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+}
+
 body {
+    margin: 0;
     display: flex;
     place-items: center;
     min-width: 320px;
     min-height: 100vh;
     background-color: #00834a;
     background-image: url("asset/overlay.png"), url("asset/circles.svg");
+    background-position: top left, center center;
     background-repeat: repeat, no-repeat;
     background-size: 200px, cover;
 }
