--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@
     background-color: rgba(255,255,255,0.1);
     border-radius: 1rem;
     backdrop-filter: blur(3px);
-    animation: app_init 1s linear;
+    /*animation: app_init 1s linear;*/
 }
 
 body {
