--- a/src/style.css
+++ b/src/style.css
@@ -9,24 +9,26 @@
     -webkit-text-size-adjust: 100%;
 }
 
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
 #app {
-    margin: 0 auto;
     padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     text-align: center;
-    background-color: rgba(255,255,255,0.1);
+    background-color: rgba(255, 255, 255, 0.1);
     border-radius: 1rem;
     backdrop-filter: blur(3px);
     /*animation: app_init 1s linear;*/
 }
 
+
 body {
-    margin: 0;
     display: flex;
-    place-items: center;
-    height: 100vh;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
     background-color: #424A63;
     background-position: top left, center center;
     background-repeat: repeat, no-repeat;
